# employee-attrition-mlops

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  model.joblib  pyproject.toml  requirements.txt
scripts/: download_data.py  train.py  train_pipeline.py
src/: Dockerfile  data_loader.py  model.py  train.py
src/attrition/api/: main.py  model_loader.py
src/attrition/models/: model.py  train.py
src/attrition/utils/: preprocess.py
tests/: test_preprocess.py  test_train.py
